# toolbox

./: .env  .env.persist  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  collect.sh  image-apps.nix  supervisord.conf
.github/workflows/: docker-image.yaml
apps/caddy/: Caddyfile  Dockerfile.fragment
apps/label-studio/: 0006-Remove-sidebar.patch  0008-Bypass-login.patch  Dockerfile.fragment  add-toolbox-template-group.patch  fix-interactive-annotation.patch  remove-theme-toggle.patch  style-overrides.patch  sw.patch  venv-bundle-python.patch
apps/label-studio-ml-backend/: Dockerfile.fragment
apps/ls-utils/: Dockerfile.fragment  README.md  create.py  export.py  pyproject.toml
apps/ls-utils/templates/: README.md  anomaly-detection.html  orientation-estimation.html
apps/mlflow/: Dockerfile.fragment  light-theme-default.patch  remove-sidebar-when-embed.patch  style-overrides-mlflow.patch  style-overrides.patch
apps/modelargs/: Dockerfile.fragment  pyproject.toml
apps/modelargs/modelargs/: __init__.py
apps/nexus/: Dockerfile.fragment  README.md  app.py  gateway.py  nexus.py  pyproject.toml  worker-logging.conf
apps/nexus/static/: autofill.js  model.js  optimizer-status.js  overrides-labelstudio.css  overrides-mlflow.css  properties.css  status.js  style.css
apps/nexus/templates/: cam-optimization-result.html  cam-optimization.html  (+11 more)
apps/optimizer/: pyproject.toml
apps/optimizer/optimizer/: optimization_classes.py  run_optimizer.py
branding/: Dockerfile  README.md  properties.css
models/: README.md
patches/: style-overrides-mlflow.patch
