[project]
name = "optimizer"
version = "0.1.0"
description = "Camera placement optimizer"
dependencies = [
    "matplotlib",
    "shapely",
    "svgpathtools",
    "scipy",
    "torch",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.11.0%2Bcpu-cp314-cp314-manylinux_2_28_x86_64.whl" }
